--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-
+<h1>Sanyan's Suitcase</h1>
 <ul>
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="contact">Contact</a></li>
