--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<h1>Sanyan's Suitcase</h1>
-<ul>
-  <li><a routerLink="">Home</a></li>
-  <li><a routerLink="contact">Contact</a></li>
-</ul>
+<mat-toolbar color="primary" class="navbar">
+  <a>Sanyan's Suitcase</a>
+  <a routerLink="">Home</a>
+  <a routerLink="contact">Contact Us</a>
+</mat-toolbar>
 
 
 <router-outlet></router-outlet>
